--- a/css/elzero.css
+++ b/css/elzero.css
@@ -5,6 +5,7 @@
     --main-transition:0.3s;
     --main-padding-top:100px;
     --main-padding-bottom:100px;
+    --section-background:#ececec;
 }
 *{
     box-sizing: border-box;
@@ -53,6 +54,7 @@ img{
 .main-title{
     margin: 0 auto 80px;
     font-size: 30px;
+    text-transform: uppercase;
     border: 2px solid black;
     padding: 10px 20px;
     width: fit-content;
@@ -387,8 +389,256 @@ gap: 30px;
     animation: moving-arrow 0.6s linear infinite;
 }
 /* end articles */
+/* start gallery */
+.gallery{
+    padding-top: var(--main-padding-top);
+    padding-bottom: var(--main-padding-bottom);
+    position: relative;
+    background-color: var(--section-background);
+}
+.gallery .container{
+    display: grid;
+    grid-template-columns:repeat(auto-fill, minmax(300px,1fr));
+    grid-gap: 30px;
+}
+.gallery .box{
+    padding: 15px;
+    background-color: white;
+    box-shadow: 0 12px 20px 0 rgb(0 0 0/ 13%), 0 2px 4px 0 rgb(0 0 0 / 12%);
+}
+.gallery .box .image{
+    position: relative;
+    overflow: hidden;
 
+}
+.gallery .box .image::before{
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    background-color: rgb(255 255 255 /50%);
+    width: 0;
+    height: 0;
+    opacity: 0;
+    z-index: 2;
+}
+.gallery .box .image:hover::before{
+    animation: flashing .7s;
+}
+.gallery .box img{
+    max-width: 100%;
+    transition: var(--main-transition);
+}
+.gallery .box .image:hover img{
+    transform: rotate(5deg) scale(1.1);
+}
+/* end gallery */
+/* start features */
+.features{
+    padding-top: var(--main-padding-top);
+    padding-bottom: var(--main-padding-bottom);
+    position: relative;
+    background-color: white;
+}
+.features .container{
+display: grid;
+grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
+gap: 30px;
+}
+.features .container .box{
+    text-align: center;
+    border: 1px solid #ccc;
+}
+.features .container .box .img-holder{
+position: relative;
+overflow: hidden;
+}
+.features .container .box .img-holder::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+.features .container .box .img-holder::after{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    border-style: solid;
+    border-color: transparent transparent white transparent;
+    border-width: 0px 0px 170px 600px;
+    transition: var(--main-transition );
+}
+.features .container .box:hover .img-holder::after{
+    border-width: 170px 600px 170px 0;
+}
+.features .container .box .img-holder img{
+max-width: 100%;
+}
+.features .box h2{
+    position: relative;
+    font-size: 40px;
+    margin: auto;
+    width: fit-content;
+}
+.features .box h2::after{
+content: "";
+position: absolute;
+bottom: -20px;
+left: 15px;
+height: 5px;
+width: calc(100% - 30px);
+}
+.features .box p{
+        margin: 30px 0;
+    line-height: 1.5;
+    padding: 5px;
+    font-size: 17px;
+    color: #555;
+}
+.features .box a{
+display: block;
+border: 3px solid transparent;
+margin: 0 auto 30px ;
+width: fit-content;
+font-size: 22px;
+font-weight: bold;
+padding: 10px 30px;
+border-radius: 6px;
+transition: var(--main-transition);
+}
+.features .quality .img-holder::before{
+    background-color:  rgb(244 64 54 / 60%);
 
+}
+.features .quality h2::after{
+    background-color: #f44036;
+
+}
+.features .quality a{
+    color: #f44036;
+    border-color: red ;
+    background: linear-gradient(to right , #f44036 50% ,white 50%);
+    background-size: 200% 100%;
+    background-position: right bottom;
+}
+.features .time .img-holder::before{
+    background-color:  rgb(3 169 244 / 60%);
+
+}
+.features .time h2::after{
+    background-color: #03a9fa;
+
+}
+.features .time a{
+    color: #03a9fa;
+    border-color: #03a9fa ;
+    background: linear-gradient(to right , #03a9fa 50% ,white 50%);
+    background-size: 200% 100%;
+    background-position: right bottom;
+}
+.features .passion .img-holder::before{
+    background-color:  rgb(0 160 136 / 60%);
+
+}
+.features .passion h2::after{
+    background-color: #009688;
+
+}
+.features .passion a{
+    color: #009688;
+    border-color: #009688 ;
+    background: linear-gradient(to right , #009688 50% ,white 50%);
+    background-size: 200% 100%;
+    background-position: right bottom;
+}
+.features .box:hover a{
+    background-position: left bottom;
+    color:  white;
+}
+
+/* end features */
+/* Start Testimonials */
+.testimonials{
+    padding-top: var(--main-padding-top);
+    padding-bottom: var(--main-padding-bottom);
+    position: relative;
+    background-color: var(--section-background);
+}
+.testimonials .container{
+display: grid;
+grid-template-columns: repeat(auto-fill , minmax(300px , 1fr));
+gap: 30px;
+}
+.testimonials .box{
+    padding: 20px;
+    background-color: white;
+    box-shadow: 0 2px 4px rgb(0 0 0 / 12%);
+    border-radius: 6px;
+    position: relative;
+    
+}
+.testimonials .box img{
+    position: absolute;
+    right: -32px;
+    top: -40px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border: 10px solid var(--section-background);
+}
+.testimonials .box h3{
+    margin: 0 0 10px;
+    color: var(--main-color);
+}
+.testimonials .box .title{
+    color: #777;
+    display: block;
+    margin-bottom: 10px;
+}
+.testimonials .box .rate .filled{
+    color: #ffc10f;
+}
+.testimonials .box p{
+    line-height: 1.5;
+    color: #555;
+    margin-top: 10px;
+    margin-bottom: 0;
+}
+/* End Testimonials */
+
+/* Start Team */
+.team{
+    padding-top: var(--main-padding-top);
+    padding-bottom: var(--main-padding-bottom);
+    position: relative;
+}
+.team .container{
+display: grid;
+grid-template-columns: repeat(auto-fill , minmax(300px , 1fr));
+gap: 30px;
+}
+.team .box{
+position: relative;
+}
+.team .box::before{
+    content: "";
+    background-color: #f3f3f3;
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 100%;
+    width: calc(100% - 60px);
+    border-radius: 10px;
+    z-index: -2;
+}
+.team .box .date .img{
+    width: 100%;
+}
+/* End Team */
 
 /* start animation */
 @keyframes up-and-down{
@@ -440,4 +690,16 @@ gap: 30px;
         transform: translateX(10px);
     }
 }
+@keyframes flashing{
+    0%,40%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+        width: 200%;
+        height: 200%;
+    }
+}
 /* end animation */
+
+
