--- a/css/elzero.css
+++ b/css/elzero.css
@@ -33,9 +33,6 @@ a{
     margin-left: auto;
     margin-right: auto;
 }
-img{
-    width: 100%;
-}
 @media (min-width: 768px) {
     .container{
         width: 750px;
@@ -135,12 +132,12 @@ align-items: center;
     top: calc(100% + 1px);
 }
 .header .main-nav > li > a{ 
-    margin: 0 30px;
     display: flex;
-    height: 72px;
-    position: relative;
     align-items: center;
     justify-content: center;
+    margin: 0 30px;
+    height: 72px;
+    position: relative;
     color: black;
     overflow: hidden;
     transition: var(--main-transition);
@@ -150,6 +147,7 @@ align-items: center;
         padding: 10px;
         font-size: 14px;
         height: 40px;
+        margin: 0;
     }
 }
 .header .main-nav > li > a::before{
@@ -183,6 +181,7 @@ align-items: center;
     top: calc(100% + 50px);
     transition: top var(--main-color), opacity var(--main-transition);
 }
+
 @media (max-width:767px){
     .header .mega-menu{
         flex-direction: column;
@@ -624,21 +623,425 @@ gap: 30px;
 .team .box{
 position: relative;
 }
-.team .box::before{
+.team .box::before,
+.team .box::after{
     content: "";
     background-color: #f3f3f3;
     position: absolute;
     right: 0;
     top: 0;
     height: 100%;
-    width: calc(100% - 60px);
     border-radius: 10px;
-    z-index: -2;
+    transition: var(--main-transition);
 }
-.team .box .date .img{
-    width: 100%;
+.team .box::before{
+    z-index: -2;
+    width: calc(100% - 60px);
+}
+.team .box::after{
+    z-index: -1;
+    background-color: #e4e4e4;
+    width: 0;
+}
+.team .box:hover::after{
+    width: calc(100% - 60px);
+}
+.team .box .date {
+display: flex;
+align-items: center;
+padding-top: 60px;
+}
+.team .box .date img{
+    width: calc(100% - 60px);
+    transition: var(--main-transition);
+    border-radius: 10px;
+}
+.team .box:hover img{
+    filter: grayscale(100%);
+}
+.team .box .date .social {
+    width: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+.team .box .date .social a {
+    width: 60px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.team .box .date .social a:hover i{
+    color: var(--main-color);
+}
+.team .box .date .social i {
+    color: #777;
+    transition: var(--main-transition);
+}
+.team .box .info{
+    padding-left: 80px;
+}
+.team .box .info h3{
+    margin-bottom: 0;
+    color: var(--main-color);
+    font-size: 22px;
+    transition: var(--main-transition);
+}
+.team .box .info p{
+    margin: 10px 0 25px 0;
+    text-transform: capitalize;
+}
+.team .box:hover .info h3{
+    color: #777;
 }
 /* End Team */
+/* start Services */
+.services{
+    padding-top: var(--main-padding-top);
+    padding-bottom: var(--main-padding-bottom);
+    position: relative;
+    background-color: var(--section-background);
+}
+.services .container{
+display: grid;
+grid-template-columns: repeat(auto-fill , minmax(300px , 1fr));
+gap: 30px;
+}
+.services .box{
+    background-color: white;
+    box-shadow: 0 12px 20px 0 rgb( 0 0 0 / 13%), 0 2px 4px 0 rgb( 0 0 0 / 12%);
+    counter-increment: services;
+    transition: var(--main-transition);
+    position: relative;
+}
+.services .box::before{
+    content: "";
+    left: 50%;
+    transform: translateX(-50%);
+    height: 3px;
+    top: -3px;
+    background-color: var(--main-color);
+    position: absolute;
+    width: 0;
+    transition: var(--main-transition);
+
+}
+.services .box:hover{
+    transform: translateY(-10px);
+}
+.services .box:hover::before{
+    width: 100%;
+}
+.services .box > i{
+margin: 30px auto 20px;
+display: block;
+text-align: center;
+color: #d5d5d5;
+}
+.services .box > h3{
+text-align: center;
+margin: 20px 0 40px;
+font-size: 25px;
+color: var(--main-color);
+}
+.services .box .info{
+padding: 15px;
+background-color: #f9f9f9;
+position: relative;
+text-align: right;
+}
+.services .box .info::before{
+    content: "0"counter(services);
+    position: absolute;
+    background-color: var(--main-color);
+    color: white;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 80px;
+    font-size: 30px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-right: 15px;
+}
+.services .box .info::after{
+    content: "";
+    position: absolute;
+    background-color: #d5d5d5;
+    top: 0;
+    left: 80px;
+    width: 50px;
+    height: calc(100% + 0.4px);
+    transform: skewX(-30deg);
+}
+.services .box .info a{
+    color: var(--main-color);
+}
+/* End Services */
+
+/* Start Skills */
+.our-skills{
+    padding-top: var(--main-padding-top);
+    padding-bottom: var(--main-padding-bottom);
+    position: relative;
+}
+.our-skills .container{
+    display: flex;
+    align-items: center;
+   
+}
+@media (max-width: 991px){
+    .our-skills img{
+        display: none;
+    }
+}
+.our-skills .container img{
+    width: 600px;
+}
+.our-skills .skills{
+    flex: 1;
+    
+}
+.our-skills .skill{
+margin: 10px;
+}
+.our-skills .skill h3{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+.our-skills .skill h3 span{
+    font-size: 12px;
+    padding: 3px 5px;
+    border:1px solid #ccc ;
+    border-radius: 5px ;
+    color: var(--main-color);
+}
+.our-skills .skill .the-progress{
+height: 25px;
+background-color: #eee;
+position: relative;
+}
+.our-skills .skill .the-progress span{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    background-color: var(--main-color);
+
+}
+/* End Skills */
+
+/* Start Work Steps */
+.work-steps{
+    padding-top: var(--main-padding-top);
+    padding-bottom: var(--main-padding-bottom);
+    position: relative;
+    background-color: var(--section-background);
+}
+.work-steps .container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+@media (max-width : 991px){
+    .work-steps .container {
+        flex-direction: column;
+    }
+}
+.work-steps .container .image img{
+max-width: 100%;
+margin-right: 100px;
+}
+@media (max-width : 991px){
+    .work-steps .container .image img{
+        margin: 0 0 50px;
+    }
+}
+.work-steps .steps {
+    align-items: center;
+    justify-content: center;
+}
+.work-steps .steps .box {
+    background-color: #f6f5f5;
+    display: flex;
+    align-items: center;
+    position: relative;
+    z-index: 1;
+    padding: 30px;
+    border: 1px solid #ffffff;
+    border-radius: 6px;
+    margin-bottom: 20px;
+}
+.work-steps .steps .box::before{
+    content: "";
+    left: 50%;
+    top: 50%;
+    position: absolute;
+    width: 0;
+    height: 0;
+    transform: translate(-50% , -50%);
+    background-color: #ededed;
+    z-index: -1;
+    transition: var(--main-color);
+}
+.work-steps .steps .box:hover::before{
+width: 100%;
+height: 100%;
+}
+.work-steps .steps .box img{
+    width: 66px;
+    margin-right: 30px;
+}
+.work-steps .steps .box .text h3{
+    margin: 0;
+    font-size: 22px;
+}
+.work-steps .steps .box .text p{
+color: #777;
+line-height: 1.7;
+margin: 10px 0 0;
+font-size: 18px;
+}
+@media (max-width : 768px){
+    .work-steps .steps .box {
+        flex-direction: column;
+        text-align: center;
+    }
+    .work-steps .steps .box img {
+        margin: 0 auto;
+        
+    }
+}
+/* End Work Steps */
+/* start EVents */
+.events{
+    padding-top: var(--main-padding-top);
+    padding-bottom: var(--main-padding-bottom);
+    position: relative;
+}
+.events .container{
+        display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.events img{
+    max-width: 450px;
+}
+@media (max-width : 991px) {
+    .events img{
+        display: none;
+    }
+}
+.events .info{
+    flex: 1;
+}
+.events .info .time{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin: 20px auto;
+}
+.events .info .time .unit{
+    border: 1px solid #d4d4d4;
+    border-radius: 6px;
+    text-align: center;
+    width: 75px;
+    transition: var(--main-transition);
+}
+.events .info .time .unit span:first-child{
+display: block;
+font-size: 35px;
+padding: 15px;
+color: var(--main-color);
+font-weight: bold;
+}
+.events .info .time .unit span:last-child{
+display: block;
+padding: 8px 10px;
+font-size: 13px;
+border-top: 1px solid #d4d4d4;
+}
+.events .info .time .unit:hover,
+.events .info .time .unit:hover span:last-child{
+    border-color: var(--main-color);
+    transition: var(--main-transition);
+}
+.events .title{
+    text-align: center;
+    margin-top: 40px 0 0 ;
+    font-size: 30px;
+}
+.events .description{
+    text-align: center;
+    line-height: 1.7;
+    font-size: 19px;
+    color: #777;
+}
+.events  .subscribe{
+width: 100%;
+margin-top: 50px;
+}
+.events .subscribe form{
+    width: 600px;
+    margin: 20px auto;
+    padding: 30px 40px;
+    background-color: #f6f5f5;
+    border-radius: 50px;
+    display: flex;
+    gap: 20px;
+}
+@media (max-width: 767px) {
+    .events .subscribe form{
+        max-width: 100%;
+        padding: 20px;
+        flex-direction: column;
+        border-radius: 0;
+    }
+}
+.events .subscribe form input[type="email"]{
+padding: 20px;
+border-radius: 50px;
+border: none;
+flex: 1;
+caret-color: var(--main-color);
+}
+
+.events .subscribe form input[type="email"]:focus{
+    outline: none;
+}
+.events .subscribe form input[type="email"]::placeholder{
+    transition: opacity var(--main-transition);
+}
+.events .subscribe form input[type="email"]:focus::placeholder{
+    opacity: 0;
+}
+.events .subscribe form input[type="submit"]{
+border-radius: 50px;
+border-bottom: none;
+background-color: var(--main-color);
+color: white;
+font-weight: bold;
+padding: 20px;
+cursor: pointer;
+transition: var(--main-color);
+}
+.events .subscribe form input[type="submit"]:hover{
+background-color: var(--main-color-alt);
+}
+@media (max-width: 767px) {
+    .events .subscribe form input[type="email"],
+    .events .subscribe form input[type="submit"]{
+        border-radius: 0;
+    }
+}
+/* End EVents */
 
 /* start animation */
 @keyframes up-and-down{
