i've completed the project ,including the pricing ,videos,awesome,features,and discount sections and finally the footer i also applied some visual enhancements  to the design

--- a/css/elzero.css
+++ b/css/elzero.css
@@ -89,6 +89,35 @@ a{
     transition-delay: .5s;
     border:2px solid white;
 }
+.spikes {
+    position: relative;
+}
+
+.spikes::after {
+    content: '';
+    position: absolute;
+    right: 0;
+    width: 100%;
+    z-index: 1;
+    height: 30px;
+    background-image: linear-gradient(135deg, white 25%, transparent 25%),linear-gradient(225deg, white 25%, transparent 25%);
+    background-size: 30px 30px;
+}
+.dots{
+    background-image: url(../imgs/dots.png);
+    height: 186px;
+    width: 204px;
+    background-repeat: no-repeat;
+    position: absolute;
+}
+.dots-up{
+    top: 200px;
+    right: 0;
+}
+.dots-down{
+    bottom: 200px;
+    left: 0;
+}
 /* End Glopal Rules  */
 /* STart HEader */
 .header{
@@ -582,7 +611,7 @@ gap: 30px;
 }
 .testimonials .box img{
     position: absolute;
-    right: -32px;
+    right: -10px;
     top: -40px;
     width: 100px;
     height: 100px;
@@ -1043,7 +1072,494 @@ background-color: var(--main-color-alt);
 }
 /* End EVents */
 
+/* start Pricing */
+.pricing{
+    padding-top: var(--main-padding-top);
+    padding-bottom: var(--main-padding-bottom);
+    position: relative;
+    background-color: var(--section-background);
+}
+.pricing .container{
+    display: grid;
+    grid-template-columns: repeat(auto-fill , minmax(300px , 1fr));
+    gap: 30px;
+}
+.pricing .box{
+position: relative;
+box-shadow: 0 12px 20px 0 rgb( 0 0 0 / 13%), 0 2px 4px 0 rgb( 0 0 0 / 12%);
+transition: var(--main-transition);
+background-color: white;
+text-align: center;
+z-index: 1;
+}
+.pricing .box::before,
+.pricing .box::after{
+    content: "";
+    width: 0;
+    height: 50%;
+    background-color: #f6f6f6;
+    position: absolute;
+    z-index: -1;
+    transition: var(--main-transition);
+}
+.pricing .box::before{
+    left: 0;
+}
+.pricing .box::after{
+    right: 0;
+    bottom: 0;
+}
+.pricing .box:hover::before,
+.pricing .box:hover::after{
+    width: 100%;
+}
+@media (min-width: 1200px){
+    .pricing .popular{
+        top: -20px;
+    }
+}
+.pricing .popular .label{
+    background: var(--main-color);
+    writing-mode: vertical-rl;
+    position: absolute;
+    right: 16px;
+    color: white;
+    font-weight: bold;
+    padding: 10px 10px 35px 10px;
+    font-size: 18px;
+    width: 40px;
+}
+.pricing .popular .label::before{
+    content: "";
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    border-width: 20px;
+    border-style: solid;
+    border-color: transparent transparent white transparent;
+}
+.pricing .box .title{
+        font-weight: bold;
+    font-size: 26px;
+    margin: 30px 0;
+    letter-spacing: -1px;
+
+}
+.pricing .box img{
+    width: 80px;
+    margin-bottom: 30px;
+}
+.pricing .box .price{
+    margin-bottom:20px ;
+}
+.pricing .box .amount{
+    display: block;
+    font-size: 60px;
+    font-weight: bold;
+    margin-bottom: 5px;
+    color: var(--main-color);
+}
+.pricing .box .time{
+    color: #777;
+}
+.pricing .box ul{
+    text-align: left;
+}
+.pricing .box ul li{
+    padding: 20px;
+    border-top: 1px solid #eee;
+}
+.pricing .box ul li::before{
+    font-family: "Font Awesome 5 Free";
+    content: "\f00c";
+    margin-right: 10px;
+    font-weight: 900;
+    color: var(--main-color);
+
+}
+.pricing .box a{
+    display: block;
+    width: fit-content;
+    border: 2px solid var(--main-color);
+    color: var(--main-color-alt);
+    margin: 30px auto 40px;
+    padding: 15px 20px;
+    border-radius: 6px;
+    font-weight: bold;
+    transition: var(--main-transition);
+}
+.pricing .box a:hover{
+    background-color: var(--main-color-alt);
+    border-color: var(--main-color-alt);
+    color: white;
+}
+/* end Pricing */
+
+/* start Video  */
+.videos{
+    padding-top: var(--main-padding-top);
+    padding-bottom: var(--main-padding-bottom);
+}
+.videos .holder{
+    display: flex;
+    justify-content: center;
+    border: 1px solid #ddd;
+    background-color: var(--section-background);
+
+}
+@media (max-width: 991px){
+    .videos .holder{
+        flex-direction: column-reverse;
+    }
+}
+.videos .holder .list{
+    min-width: 300px;
+    background-color: white;
+}
+.videos .holder .list .name{
+    display: flex;
+    justify-content: space-between;
+    background: #ddd;
+    padding: 20px;
+    font-weight: bold;
+    color: var(--main-color);
+}
+.videos .holder .list .name i{
+    font-size: 20px;
+}
+.videos .holder .list ul li {
+    padding: 20px;
+    border-top: 1px solid var(--section-background);
+    cursor: pointer;
+    transition: var(--main-transition);
+}
+.videos .holder .list ul li:hover{
+    background-color: #fafafa;
+    color: var(--main-color);
+}
+.videos .holder .list ul li span{
+    display: block;
+    color: #777;
+    padding-top: 10px;
+}
+.videos .holder .preview{
+    background-color: #e2e2e2;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.videos .holder  .preview img{
+    max-width: 100%;
+}
+.videos .holder .preview .info{
+    padding: 20px;
+    background-color: white;
+    margin-top: 10px;
+}
+/* start Video  */
+
+/* Start Stats */
+.stats{
+    padding-top:var(--main-padding-top) ;
+    padding-bottom:var(--main-padding-bottom) ;
+    position: relative;
+    background-image:url(../imgs/stats.jpg) ;
+    background-size: cover;
+    min-height: 300px;
+}
+.stats::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(255 255 255 / 95%);
+}
+.stats h2{
+    font-weight: bold;
+    font-size: 40px;
+    width: fit-content;
+    margin: 0 auto 50px;
+    position: relative;
+}
+.stats .container{
+display: grid;
+grid-template-columns: repeat(auto-fill , minmax(250px, 1fr));
+gap: 20px;
+}
+.stats .container .box{
+    background-color: white;
+    padding: 30px 15px;
+    text-align: center;
+    position: relative;
+    opacity: .8;
+    transition: var(--main-transition);
+}
+.stats .container .box:hover{
+opacity: 1;
+}
+.stats .container .box::before,
+.stats .container .box::after{
+    content: "";
+    position: absolute;
+    width: 2px;
+    background-color: var(--main-color);
+    transition: 1s;
+    height: 0;
+}
+.stats .container .box::before{
+    top: 0;
+    left: 0;
+}
+.stats .container .box::after{
+    bottom: 0;
+    right:0;
+}
+.stats .container .box:hover:before,
+.stats .container .box:hover:after{
+    height: 100% ;
+}
+.stats .container .box .number{
+    display: block;
+    font-size: 50px;
+    font-weight: bold;
+    margin:10px 0;
+    
+}
+.stats .container .box .text{
+    color:var(--main-color) ;
+    font-style: italic;
+    font-size: 20px;
+    font-weight: bold;
+}
+/* ENd Stats */
+
+/* start Discount */
+.discount{
+    min-height: 100vh;
+    display: flex;
+    flex-wrap: wrap;
+}
+@media (max-width:991px){
+    .discount{
+    padding-bottom: var(--main-padding-bottom);
+    }
+}
+.discount .image{
+    background-image: url(../imgs/discount-background1.jpg);
+    background-size: cover;
+    color: white;
+    flex-basis: 50%;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    z-index: 1;
+    animation: change-background 10s linear infinite;
+}
+
+.discount .image::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(34, 129, 207, 0.867);
+    z-index: -1;
+}
+.discount .image img{
+    max-width: 100%;
+    width: 300px;
+
+}
+
+.discount .form{
+    display: flex;
+    flex-basis: 50%;
+    justify-content: center;
+    align-items: center;
+}
+@media (max-width: 991px ){
+    .discount .image{
+        flex-basis: 100%;
+    }
+    .discount .form{
+        flex-basis: 100%;
+    }
+}
+.discount form .input{
+    display: block;
+    margin-bottom: 25px;
+    width: 100%;
+    padding: 15px;
+    border: none;
+    border-bottom: 1px solid #ccc;
+    background-color: #f9f9f9;
+    caret-color: var(--main-color);
+}
+.discount form  textarea.input{
+resize: none;
+height: 200px;
+}
+.discount .form .input:focus{
+outline: none;
+}
+.discount .form [type="submit"]{
+    display: block;
+    width: 100%;
+    padding: 15px;
+    cursor: pointer;
+    background-color: var(--main-color);
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    border: none;
+    transition: var(--main-transition);
+}
+.discount .form [type="submit"]:hover{
+background-color: var(--main-color-alt);
+}
+.discount .content{
+    text-align: center;
+    padding: 0 20px;
+}
+.discount .content h2{
+    font-size: 40px;
+    letter-spacing: -2px;
+}
+.discount .content p{
+    line-height: 1.6;
+    max-width: 500px;
+    font-size: 18px;
+}
+
+/* end Discount */
+
+/* Start Footer */
+.footer{
+    padding:70px 0 0;
+    background-color: #191919;
+}
+.footer .container{
+    display: grid;
+    grid-template-columns: repeat(auto-fill , minmax(250px, 1fr));
+    gap: 40px;
+}
+.footer .box h3{
+    font-size: 50px;
+    color: white;
+    margin-bottom: 20px;
+}
+.footer .box .social{
+    display: flex;
+}
+.footer .box .social li{
+    margin-right: 10px;
+}
+.footer .box .social a{
+    color: #b9b9b9;
+    background-color: #313131;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    font-size: 20px;
+    transition: var(--main-transition);
+}
+.footer .box .social .facebook:hover{
+    background-color: #1877f2;
+}
+.footer .box .social .twitter:hover{
+    background-color: #060b0f;
+}
+.footer .box .social .youtube:hover{
+    background-color: #ff0000;
+}
+.footer .box .text{
+    line-height: 2;
+    margin: 10px 0;
+    color: #777;
+}
+
+
+.footer .box .links li{
+    padding: 15px 0;
+    transition: var(--main-transition);
+
+}
+.footer .box .links li:not(:last-child){
+    border-bottom: solid 1px #555;
+}
+.footer .box .links li:hover a{
+    color: white;
+    padding-left: 10px;
+}   
+.footer .box .links a{
+    color: #777;
+    transition: var(--main-transition);
+}
+.footer .box .links a::before{
+    font-family: "Font Awesome 5 Free";
+    content: "\f101";
+    margin-right: 10px;
+    font-weight: 900;
+    color: var(--main-color);
+}
+
+
+.footer .box .line{
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+    color: #b9b9b9;
+}
+.footer .box .line i{
+    color: var(--main-color);
+    font-size: 22px;
+    margin-right: 10px;
+}
+.footer .box .line .info{
+    line-height: 1.7;
+    flex: 1;
+}
+.footer .box .line .info span{
+    display: block;
+}
+
+.footer .footer-gallery img{
+    width: 78px;
+    border: 3px solid white;
+    margin: 2px;
+}
+.footer .copyright{
+    padding: 25px 0;
+    text-align: center;
+    border-top: 1px solid #777;
+    color: white;
+    margin: 50px 0 0;
+}
+@media (max-width: 767px){
+    .footer{
+        text-align: center;
+    }
+    .footer .box .social {
+        justify-content: center;
+    }
+    .footer .box .line {
+        flex-direction: column;
+    }
+    .footer .box .line i {
+        margin-bottom: 10px;
+    }
+}
+/* End Footer */
+
 /* start animation */
+
 @keyframes up-and-down{
     0%,100%{
         top:0;
@@ -1101,6 +1617,14 @@ background-color: var(--main-color-alt);
         opacity: 0;
         width: 200%;
         height: 200%;
+    }
+}
+@keyframes change-background{
+    0%, 100% {
+        background-image: url(../imgs/discount-background1.jpg);
+    }
+    50%{
+        background-image: url(../imgs/discount-background2.jpg);
     }
 }
 /* end animation */
